[package]
name = "lumus-git"
version = "0.1.0"
edition = "2021"
authors = ["Dayvson Spacca spacca.dayvson@gmail.com"]
description = "Lumus CLI is a simple Rust CLI tool for fetching GitHub insights locally."
readme = "README.md"
repository = "https://github.com/dayvsonspacca/lumus-git"
license = "MIT"
keywords = ["sql", "sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
cli-table = "0.4.8"
git2 = "0.19.0"
